# auto-researcher

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
app/: streamlit_app.py
docs/: design.md
scripts/: Caddyfile  backup.sh  dev.sh  live_e2e.py  live_e2e_experiment.py  live_e2e_parallel.py  live_e2e_repo.py  restart.sh  serve.sh  stop.sh
src/deep_researcher/: __init__.py  config.py  gateway.py  monitor.py  notify.py  observability.py  patches.py  runner.py
src/deep_researcher/agents/: __init__.py  root.py
src/deep_researcher/codex/: __init__.py  runner.py  workspace.py
src/deep_researcher/codex/skills/: __init__.py  langfuse_traces.py
src/deep_researcher/storage/: __init__.py  artifact_service.py  catalog.py  experiences.py  fts.py  jobs.py
src/deep_researcher/tools/: __init__.py  artifacts.py  codex.py  discovery.py  experiences.py  literature.py  registry.py  repo.py
tests/: conftest.py  scripted_llm.py  test_codex.py  test_discovery.py  test_experiences.py  test_gateway.py  test_iteration_orchestration.py  test_langfuse_skill.py  test_literature.py  test_monitor.py  test_observability.py  test_parallel.py  test_pipeline.py  test_repo_codex.py  test_repo_tools.py  test_resilience.py  test_resume.py  test_search_tools.py  test_storage.py  test_workspace.py
ui/: next.config.ts  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/api/copilotkit/: route.ts
ui/components/: ArtifactsPane.tsx  BoardPane.tsx  Dashboard.tsx  Markdown.tsx  RunsPane.tsx  Sidebar.tsx
