[project]
name = "deep-researcher"
version = "0.1.0"
description = "Deep Researcher: a locally hosted, human-steered multi-agent research system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-adk>=0.6.5",
    "aiosqlite>=0.22.1",
    "google-adk[db]>=2.2.0",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "litellm>=1.88.1",
    "pydantic-settings>=2.14.1",
    "streamlit>=1.58.0",
]

[project.scripts]
deep-researcher = "deep_researcher:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
